fine-tuned Negation

--- a/french/pages/exercise_negation2.html
+++ b/french/pages/exercise_negation2.html
@@ -27,89 +27,104 @@
 
             <ol class="nested">
                 <li>
+                    <section class="span-half">
+                        <h4>Répondez aux questions par la négation</h4>
 
+                        <ol>
+                            <li>
+                                <span title="je ne porte pas de robes."> Portes-tu des robes ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="je ne porte pas de robes[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous n'allons pas sortir.">Est-ce que vous allez sortir ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="nous n'allons pas sortir[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je n'ai pas fumé de cigare.">As-tu fumé un cigare ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="je n'ai pas fumé de cigare[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je ne vais pas répéter l'explication.">Vas-tu répéter l’explication
+                                    ?</span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="je ne vais pas répéter l'explication[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="il ne se lève pas tôt.">Est-ce qu’il se lève tôt ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="il ne se lève pas tôt[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je n'ai pas acheté de cadeau à Sophie.">As-tu acheté un cadeau à Sophie
+                                    ?</span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="je n'ai pas acheté de cadeau à Sophie[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je ne vais pas me baigner dans la mer.">Vas-tu te baigner dans la mer
+                                    ?</span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="je ne vais pas me baigner dans la mer[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je ne parle pas italien.">Est-ce que tu parles italien ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="je ne parle pas italien[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="elle ne s’est pas lavé les cheveux.">S’est-elle lavé les cheveux ?</span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="elle ne s’est pas lavé les cheveux[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous n'amenons pas les enfants.">Amenez-vous les enfants ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="nous n'amenons pas les enfants[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je ne vais pas sortir les poubelles.">Vas-tu sortir les poubelles ?</span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="je ne vais pas sortir les poubelles[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous n'avons pas acheté le dernier roman.">Avez-vous acheté le dernier
+                                    roman ?</span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="nous n'avons pas acheté le dernier roman[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je n'apporte pas de bouteille de vin.">Apportes-tu une bouteille de vin
+                                    ?</span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="je n'apporte pas de bouteille de vin[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je n'ai pas pensé aux conséquences.">As-tu pensé aux conséquences ?</span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="je n'ai pas pensé aux conséquences[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous n'allons pas nous promener.">Allez-vous vous promener ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="nous n'allons pas nous promener[.]?"></span>
+                            </li>
+                        </ol>
+                    </section>
+                </li>
+
+                <li>
                     <section class="span-half">
                         <h4>Répondez aux questions en utilisant les termes négatifs qui conviennent.</h4>
-
-                        <div>
-                            <i><b>(-)</b> ≠ <b>ne ... pas</b></i>
-                        </div>
-                        <ol>
-                            <li>
-                                <span title="je ne mange pas de pizza.">Tu manges de la pizza ?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="je ne mange pas de pizza[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="je n'ai pas lu le journal ce matin.">As-tu lu le journal ce matin ?</span>
-                                <span>Non,&nbsp;<input type="text"
-                                        pattern="je n'ai pas lu le journal ce matin[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="il n'est pas en vacances.">Est-ce qu’il est en vacances ?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="il n'est pas en vacances[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="je ne vais pas regarder la télévision.">Vas-tu regarder la télévision
-                                    ?</span>
-                                <span>Non,&nbsp;<input type="text"
-                                        pattern="je ne vais pas regarder la télévision[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="elle n'a pas pleuré.">Est-ce qu’elle a pleuré ? </span>
-                                <span>Non,&nbsp;<input type="text" pattern="elle n'a pas pleuré[.]?"></span>
-                            </li>
-                        </ol>
-
-                        <div>
-                            <i><b>Encore / toujours</b> (changement) ≠ <b>ne ... plus</b></i>
-                        </div>
-                        <ol>
-                            <li>
-                                <span title="je n'ai plus de gomme.">Tu as encore de la gomme ?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="je n'ai plus de gomme[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="je ne vais plus au théâtre.">Vas-tu toujours au théâtre ?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="je ne vais plus au théâtre[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="il n'aime plus son travail.">Aime-t-il encore son travail ?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="il n'aime plus son travail[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="je ne regarde plus cette émission.">Regardes-tu toujours cette émission
-                                    ?</span>
-                                <span>Non,&nbsp;<input type="text"
-                                        pattern="je ne regarde plus cette émission[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="je ne fume plus.">Fumes-tu encore ?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="je ne fume plus[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="je n'ai plus ma voiture.">As-tu toujours ta voiture?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="je n'ai plus ma voiture[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="je ne parle plus à Nicole.">Parles-tu encore à Nicole ?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="je ne parle plus à Nicole[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="je ne fais plus de tricot.">Fais-tu toujours du tricot ?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="je ne fais plus de tricot[.]?"></span>
-                            </li>
-                        </ol>
 
                         <div>
                             <i><b>Déjà</b> ≠ <b>ne ... jamais</b></i>
@@ -248,42 +263,6 @@
                         </ol>
 
                         <div>
-                            <i><b> Parfois / quelquefois / de temps en temps / souvent / toujours</b></i> ≠ <i><b>ne ...
-                                    jamais</b></i>
-                        </div>
-                        <ol>
-                            <li>
-                                <span title="je ne vais jamais à Québec.">Vas-tu souvent à Québec ?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="je ne vais jamais à Québec[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="nous ne sortons jamais le dimanche.">Sortez-vous quelquefois le
-                                    dimanche?</span>
-                                <span>Non,&nbsp;<input type="text"
-                                        pattern="nous ne sortons jamais le dimanche[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="nous ne nous levons jamais tard.">Vous levez-vous toujours tard ?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="nous ne nous levons jamais tard[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="je ne parle jamais anglais.">Parles-tu anglais de temps en temps ?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="je ne parle jamais anglais[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="nous ne voyons jamais nos anciens voisins.">Voyez-vous parfois vos anciens
-                                    voisins ?</span>
-                                <span>Non,&nbsp;<input type="text"
-                                        pattern="nous ne voyons jamais nos anciens voisins[.]?"></span>
-                            </li>
-                        </ol>
-
-
-                        <div>
                             <i><b>Quelques / plusieurs / tous</b></i> ≠ <i><b>ne ... aucun</b> ou <b>aucun ne</b></i>
                         </div>
                         <ol>
@@ -344,41 +323,6 @@
                             <li>
                                 <span title="tes clés ne sont nulle part.">Mes clés sont quelque part ?</span>
                                 <span>Non,&nbsp;<input type="text" pattern="tes clés ne sont nulle part[.]?"></span>
-                            </li>
-                        </ol>
-
-
-                        <div>
-                            <i><b>Beaucoup</b></i> ≠ <i><b>ne ... pas du tout</b></i>
-                        </div>
-                        <ol>
-                            <li>
-                                <span title="je n'aime pas du tout les animaux.">Aimes-tu beaucoup les animaux ?</span>
-                                <span>Non,&nbsp;<input type="text"
-                                        pattern="je n'aime pas du tout les animaux[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="nous ne dormons pas du tout.">Dormez-vous beaucoup ?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="nous ne dormons pas du tout[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="je ne mange du tout de pâtisseries.">Manges-tu beaucoup de pâtisseries
-                                    ?</span>
-                                <span>Non,&nbsp;<input type="text"
-                                        pattern="je ne mange du tout de pâtisseries[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="je ne fume pas du tout.">Est-ce que tu fumes beaucoup ?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="je ne fume pas du tout[.]?"></span>
-                            </li>
-
-                            <li>
-                                <span title="je n'ai pas pris du tout de soleil.">As-tu pris beaucoup de soleil ?</span>
-                                <span>Non,&nbsp;<input type="text"
-                                        pattern="je n'ai pas pris du tout de soleil[.]?"></span>
                             </li>
                         </ol>
 
