--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -81,9 +81,9 @@
                         <th data-key="date" rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
                         <th data-key="A1" class="A1 conjugations conjugations-plus others" colspan="10">A1</th>
-                        <th data-key="A2" class="A2 conjugations conjugations-plus others tense-sequence" colspan="17">
+                        <th data-key="A2" class="A2 conjugations conjugations-plus others tense-sequence" colspan="16">
                             A2</th>
-                        <th data-key="B1" class="B1 conjugations tense-sequence others" colspan="13">B1</th>
+                        <th data-key="B1" class="B1 conjugations tense-sequence others" colspan="14">B1</th>
                         <th data-key="B2" class="B2 conjugations conjugations-plus tense-sequence others" colspan="12">
                             B2</th>
                     </tr>
@@ -123,11 +123,11 @@
                         <th data-key="exercise_qui_que.html" class="A2 others" colspan="1">Qui ou Que</th>
                         <th class="A2 others" colspan="1">Lui Leur</th>
                         <th class="A2 others" colspan="1" title="négation 1">nég.1</th>
-                        <th class="A2 others" colspan="1" title="négation 2">nég.2</th>
                         <th data-key="exercise_imperative.html conjugations.html?L%27impératif" class="A2 conjugations"
                             colspan="2">impératif</th>
 
                         <!-- B1 -->
+                        <th class="B1 others" colspan="1" title="négation 2">nég.2</th>
                         <th class="B1 conjugations" colspan="2">plus-que-parfait</th>
                         <th class="B1 tense-sequence">
                             <span class="full-name">imparfait - passé&nbsp;composé - plus&#8209;que&#8209;parfait</span>
@@ -209,7 +209,6 @@
                         <th class="A2 others"><a href="exercise_qui_que.html">texte</a><small>*</small></th>
                         <th class="A2 others"><a href="exercise_lui_leur.html">texte</a><small>*</small></th>
                         <th class="A2 others"><a href="exercise_negation.html">texte</a><small>*</small></th>
-                        <th class="A2 others"><a href="exercise_negation2.html">texte</a><small>*</small></th>
 
                         <!-- impératif -->
                         <th class="A2 conjugations"><a href="conjugations.html?L%27impératif">liste</a></th>
@@ -217,6 +216,7 @@
 
                         <!-- B1 -->
                         <!-- plus-que-parfait -->
+                        <th class="B1 others"><a href="exercise_negation2.html">texte</a><small>*</small></th>
                         <th class="B1 conjugations"><a href="conjugations.html?Le%20plus-que-parfait">liste</a></th>
                         <th class="B1 conjugations"><a href="exercise_pastperfect.html">texte</a></th>
 
@@ -312,12 +312,13 @@
                             <td class="A2 others" data-key="exercise_qui_que.html"></td>
                             <td class="A2 others" data-key="exercise_lui_leur.html"></td>
                             <td class="A2 others" data-key="exercise_negation.html"></td>
-                            <td class="A2 others" data-key="exercise_negation2.html"></td>
 
                             <td class="A2 conjugations" data-key="conjugations.html?L%27imp%C3%A9ratif"></td>
                             <td class="A2 conjugations" data-key="exercise_imperative.html"></td>
 
                             <!-- B1 -->
+                            <td class="B1 others" data-key="exercise_negation2.html"></td>
+
                             <td class="B1 conjugations" data-key="conjugations.html?Le%20plus-que-parfait"></td>
                             <td class="B1 conjugations" data-key="exercise_pastperfect.html"></td>
 
