fine-tuned Adjectives

--- a/french/pages/vocabulary/exercise_adjectives.html
+++ b/french/pages/vocabulary/exercise_adjectives.html
@@ -31,7 +31,7 @@
                     <section class="span-half">
                         <h4>Faites des phrases selon le modèle.</h4>
                         <div>
-                            Une vieille femme avec des cheveux courts<br /><br />
+                            Une vieille femme avec des cheveux courts.<br /><br />
                         </div>
 
                         <ol>
@@ -140,11 +140,12 @@
                 <li>
                     <section class="span-half">
                         <h4>Répondez selon le modèle.</h4>
-                        <div>
-                            Cette fille est très jeune. Oui, c’est une jeune fille.<br /><br />
-                        </div>
 
                         <ol>
+                            <li>
+                                <span>Cette fille est très jeune.</span>
+                                <span>Oui, c’est une très jeune fille.</span>
+                            </li>
 
                             <li>
                                 <span title="Oui, c'est un nouveau manteau.">
@@ -159,8 +160,8 @@
                             </li>
 
                             <li>
-                                <span title="Oui, ces gâteaux sont très gros.">Ces gâteaux sont très gros.</span>
-                                <span><input type="text" pattern="Oui, ces gâteaux sont très gros[.]?"></span>
+                                <span title="Oui, ce sont de très gros gâteaux.">Ces gâteaux sont très gros.</span>
+                                <span><input type="text" pattern="Oui, ce sont de très gros gâteaux[.]?"></span>
                             </li>
 
                             <li>
@@ -169,8 +170,8 @@
                             </li>
 
                             <li>
-                                <span title="Oui, c'est un bel homme.">Cet homme est très beau.</span>
-                                <span><input type="text" pattern="Oui, c'est un bel homme[.]?"></span>
+                                <span title="Oui, c'est un très bel homme.">Cet homme est très beau.</span>
+                                <span><input type="text" pattern="Oui, c'est un très bel homme[.]?"></span>
                             </li>
 
                             <li>
@@ -267,12 +268,12 @@
                         <ol>
                             <li>
                                 <span>Hector (chat, animal / petit, très doux)</span>
-                                <span>Hector est un petit chat, mais c’est un animal très doux.</span>
+                                <span>Hector est un petit chat, mais un animal très doux.</span>
                             </li>
 
                             <li>
-                                <span title="Tom Cruise est un grand acteur, mais un petit homme.">Tom Cruise (homme,
-                                    acteur / petit, grand)</span>
+                                <span title="Tom Cruise est un grand acteur, mais un petit homme.">Tom Cruise (acteur,
+                                    homme / grand, petit)</span>
                                 <span><input type="text"
                                         pattern="Tom Cruise est un grand acteur, mais un petit homme[.]?"></span>
                             </li>
@@ -309,7 +310,7 @@
                                 <span title="M. Lévesque est un maire respecté, mais un ancien marin.">Monsieur Lévesque
                                     (maire, marin / respecté, ancien)</span>
                                 <span><input type="text"
-                                        pattern="M. Lévesque est un maire respecté, mais un ancien marin[.]?"></span>
+                                        pattern="Monsieur Lévesque est un maire respecté, mais un ancien marin[.]?"></span>
                             </li>
 
                             <li>
@@ -377,7 +378,7 @@
                             <li>
                                 Marie-Andrée, est-ce que tu portes une <b title="neuve">robe</b>
                                 <input type="text" pattern="neuve">
-                                .
+                                ?
                             </li>
                             <li>
                                 Je préfère le
