moved some text exercises to 'vocabulary' folder

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -46,11 +46,14 @@
                         <label>
                             <input type="checkbox" name="conjugations-plus" />Conjugaisons plus
                         </label>
+                        <label>
+                            <input type="checkbox" name="tense-sequence" />Concordance des temps
+                        </label>
                         <label title="prépositions, conjonctions, déterminant">
                             <input type="checkbox" name="others" />Prép./conj./déterm
                         </label>
                         <label>
-                            <input type="checkbox" name="tense-sequence" />Concordance des temps
+                            <input type="checkbox" name="vocabulary" />Vocabulaire
                         </label>
                     </div>
 
@@ -81,9 +84,9 @@
                         <th data-key="date" rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
                         <th data-key="A1" class="A1 conjugations conjugations-plus others" colspan="10">A1</th>
-                        <th data-key="A2" class="A2 conjugations conjugations-plus others tense-sequence" colspan="15">
+                        <th data-key="A2" class="A2 conjugations conjugations-plus others tense-sequence vocabulary" colspan="15">
                             A2</th>
-                        <th data-key="B1" class="B1 conjugations tense-sequence others" colspan="15">B1</th>
+                        <th data-key="B1" class="B1 conjugations tense-sequence others vocabulary" colspan="15">B1</th>
                         <th data-key="B2" class="B2 conjugations conjugations-plus tense-sequence others" colspan="12">
                             B2</th>
                     </tr>
@@ -106,8 +109,8 @@
                         <!-- A2 -->
                         <th data-key="exercise_avoir_etre.html" class="A2 conjugations-plus" colspan="1">Avoir ou Être
                         </th>
-                        <th data-key="exercise_adjectives.html" class="A2 others" colspan="1">adjectif</th>
-                        <th data-key="exercise_il_est.html" class="A2 others" colspan="1">Il&nbsp;est ou C'est</th>
+                        <th data-key="exercise_adjectives.html" class="A2 vocabulary" colspan="1">adjectif</th>
+                        <th data-key="exercise_il_est.html" class="A2 vocabulary" colspan="1">Il&nbsp;est ou C'est</th>
                         <th data-key="exercise_mien_sien.html" class="A2 others" colspan="1">Mien Sien</th>
                         <th data-key="exercise_imperfect.html conjugations.html?L%27imparfait" class="A2 conjugations"
                             colspan="2">imparfait</th>
@@ -128,8 +131,8 @@
                         <!-- B1 -->
                         <th class="B1 others" colspan="1" title="négation 2">nég.2</th>
                         <th data-key="exercise_ceci_cela_celui.html" class="B1 others" colspan="1">Ceci Cela Celui</th>
-                        <th data-key="exercise_y_en.html" class="A2 others" colspan="1">Y En</th>
-                        <th data-key="exercise_tout.html" class="B1 others" colspan="1">Tout</th>
+                        <th data-key="exercise_y_en.html" class="B1 others" colspan="1">Y En</th>
+                        <th data-key="exercise_tout.html" class="B1 vocabulary" colspan="1">Tout</th>
                         <th data-key="exercise_que_dont.html" class="B1 others" colspan="1">Que ou Dont</th>
                         <th class="B1 others" colspan="1">Qui Que Dont Où</th>
                         <th class="B1 conjugations" colspan="2">plus-que-parfait</th>
@@ -140,10 +143,10 @@
                         </th>
                         <th data-key="exercise_conditionalpresent.html conjugations.html?Le%20conditionnel%20pr%C3%A9sent"
                             class="B1 conjugations" colspan="2">conditionnel présent</th>
-                        <th data-key="exercise_savoir_connaitre.html" class="B1 others" colspan="1">Savoir<br /> ou
+                        <th data-key="exercise_savoir_connaitre.html" class="B1 vocabulary" colspan="1">Savoir<br /> ou
                             Connaître
                         </th>
-                        <th data-key="exercise_amener_emmener.html" class="B1 others" colspan="1">Apporter, Emporter,
+                        <th data-key="exercise_amener_emmener.html" class="B1 vocabulary" colspan="1">Apporter, Emporter,
                             Amener, Emmener</th>
                         <th data-key="exercise_presentsubjunctive.html conjugations.html?Le%20subjonctif%20pr%C3%A9sent"
                             class="B1 conjugations" colspan="2">subjonctif présent</th>
@@ -191,8 +194,8 @@
 
                         <!-- A2 -->
                         <th class="A2 conjugations-plus"><a href="exercise_avoir_etre.html">texte</a></th>
-                        <th class="A2 others"><a href="vocabulary/exercise_adjectives.html">texte</a></th>
-                        <th class="A2 others"><a href="exercise_il_est.html">texte</a></th>
+                        <th class="A2 vocabulary"><a href="vocabulary/exercise_adjectives.html">texte</a></th>
+                        <th class="A2 vocabulary"><a href="vocabulary/exercise_il_est.html">texte</a></th>
                         <th class="A2 others"><a href="exercise_mien_sien.html">texte</a></th>
                         <!-- imparfait -->
                         <th class="A2 conjugations"><a href="conjugations.html?L%27imparfait">liste</a></th>
@@ -216,8 +219,8 @@
                         <!-- B1 -->
                         <th class="B1 others"><a href="exercise_negation2.html">texte</a><small>*</small></th>
                         <th class="B1 others"><a href="exercise_ceci_cela_celui.html">texte</a><small>*</small></th>
-                        <th class="A2 others"><a href="exercise_y_en.html">texte</a><small>*</small></th>
-                        <th class="B1 others"><a href="exercise_tout.html">texte</a></th>
+                        <th class="B1 others"><a href="exercise_y_en.html">texte</a><small>*</small></th>
+                        <th class="B1 vocabulary"><a href="vocabulary/exercise_tout.html">texte</a></th>
                         <th class="B1 others"><a href="exercise_que_dont.html">texte</a></th>
                         <th class="B1 others"><a href="exercise_qui_que_dont_ou.html">texte</a></th>
 
@@ -234,8 +237,8 @@
                         <th class="B1 conjugations"><a href="exercise_conditionalpresent.html">texte</a><small>*</small>
                         </th>
 
-                        <th class="B1 others"><a href="exercise_savoir_connaitre.html">texte</a></th>
-                        <th class="B1 others"><a href="exercise_amener_emmener.html">texte</a></th>
+                        <th class="B1 vocabulary"><a href="vocabulary/exercise_savoir_connaitre.html">texte</a></th>
+                        <th class="B1 vocabulary"><a href="vocabulary/exercise_amener_emmener.html">texte</a></th>
 
                         <!-- subjonctif présent -->
                         <th class="B1 conjugations"><a href="conjugations.html?Le%20subjonctif%20pr%C3%A9sent">liste</a>
@@ -295,8 +298,8 @@
 
                             <!-- A2 -->
                             <td class="A2 conjugations-plus" data-key="exercise_avoir_etre.html"></td>
-                            <td class="A2 others" data-key="exercise_adjectives.html"></td>
-                            <td class="A2 others" data-key="exercise_il_est.html"></td>
+                            <td class="A2 vocabulary" data-key="exercise_adjectives.html"></td>
+                            <td class="A2 vocabulary" data-key="exercise_il_est.html"></td>
                             <td class="A2 others" data-key="exercise_mien_sien.html"></td>
 
                             <td class="A2 conjugations" data-key="conjugations.html?L%27imparfait"></td>
@@ -318,8 +321,8 @@
                             <!-- B1 -->
                             <td class="B1 others" data-key="exercise_negation2.html"></td>
                             <td class="B1 others" data-key="exercise_ceci_cela_celui.html"></td>
-                            <td class="A2 others" data-key="exercise_y_en.html"></td>
-                            <td class="B1 others" data-key="exercise_tout.html"></td>
+                            <td class="B1 others" data-key="exercise_y_en.html"></td>
+                            <td class="B1 vocabulary" data-key="exercise_tout.html"></td>
                             <td class="B1 others" data-key="exercise_que_dont.html"></td>
                             <td class="B1 others" data-key="exercise_qui_que_dont_ou.html"></td>
 
@@ -332,8 +335,8 @@
                             </td>
                             <td class="B1 conjugations" data-key="exercise_conditionalpresent.html"></td>
 
-                            <td class="B1 others" data-key="exercise_savoir_connaitre.html"></td>
-                            <td class="B1 others" data-key="exercise_amener_emmener.html"></td>
+                            <td class="B1 vocabulary" data-key="exercise_savoir_connaitre.html"></td>
+                            <td class="B1 vocabulary" data-key="exercise_amener_emmener.html"></td>
 
                             <td class="B1 conjugations" data-key="conjugations.html?Le%20subjonctif%20pr%C3%A9sent">
                             </td>
